--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="shortcut icon" href="public/assets/favicon.png" />
+    <link rel="shortcut icon" href="favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="public/scripts/script.js"></script>
-    <script src="public/scripts/carddata.js"></script>
-    <link rel="stylesheet" href="public/css/styles.css" />
-    <link rel="stylesheet" href="public/css/cards.css" />
+    <script src="script.js"></script>
+    <script src="carddata.js"></script>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="cards.css" />
     <title>Pairs</title>
   </head>
   <body>
