--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div id="startGameCont">
       <div>
-        <img id="pairsLogo" src="public/assets/logo_text_beta.png" />
+        <img id="pairsLogo" src="logo_text_beta.png" />
         <div id="initPage">
           <button class="startButton greenButton" onclick="requestGame()">Create Game</button>
           <button class="startButton blueButton" onclick="showJoinScreen()">Join Game</button>
@@ -56,8 +56,8 @@
       </div>
     </div>
     <div id="forehead">
-      <img id="mainLogo" src="public/assets/logo_text_beta.png" />
-      <img id="secoLogo" src="public/assets/logo.png" />
+      <img id="mainLogo" src="logo_text_beta.png" />
+      <img id="secoLogo" src="logo.png" />
     </div>
     <div id="adaptCont">
       <div id="playerCarousel">
