--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="cards.css" />
     <title>Pairs</title>
+    <link rel="manifest" href="manifest.json" />
   </head>
   <body>
     <div id="error">
